# zovark-runtime

./: .gitignore  ARCHITECTURE_REPO_SOURCE.md  AUDIT.md  AUDIT_SLICE2.md  CONFORMANCE.md  DESIGN.md  GREENFIELD_HANDOVER.md  INVARIANTS.md  NEXT_SLICES.md  PHASE_PLAN.md  README.md  VERIFY.md  pyproject.toml
contracts/: context-compaction-envelope-v1.schema.json  contract-manifest.json  finding.schema.json  memory-retrieval-request-v1.schema.json  memory-retrieval-result-v1.schema.json  recommended_action.schema.json  replay-compatibility.schema.json  replay-compatibility.yaml  replay_failure_record.schema.json  replay_record.schema.json  replay_tool_catalog.schema.json  scanner_finding_envelope.schema.json  verdict_envelope.schema.json  verdict_input.schema.json
docs/: alertforge-downstream-position.md  architecture-query-checklist.md  capability-model.md  context-compaction-memory.md  current-system-diagram.md  external-standards-position.md  implementation-map.md  local-inference-position.md  local-monolith-runtime.md  replay-compatibility.md  storage-schema.md
features/: F-001-proof-package-v1.md  F-002-proof-package-v2.md  F-003-context-compaction-memory.md  F-004-replay-v2.md  F-005-investigation-memory-storage.md  F-006-capability-scoped-retrieval.md  F-007-fast-code-isolation.md  F-008-sandbox-execute.md  index.md
scripts/: check_contract_manifest.py  check_invariants.py  check_no_unbounded_model_context.py
tests/: test_adr0046_bridge.py  test_ai_investigation.py  test_context_memory_semantic_validators.py  test_contract_schema_meta_validation.py  (+22 more)
(+120 files in other folders)
